pypet 0.1b.2

*   Results support __iter__()

*   BrianMonitorResult, the name of state variables in array mode
    is changed to varname+'_%Xd', instead of varname+'_idx%08d', and 'spiketimes_%08d' to
    'spiketimes_%Xd' and X is chosen in accordance with the number of neurons

*   BUG FIX: nested_equal now supports Object Tables containing numpy arrays

*   Better categorizations of the utility functions

*   Comments are no longer limited in size

*   New Brian Result

*   Storage Service in case of purging now sets the comment to the result with the lowest index,
    in case of multiprocessing.

*   Old API names are kept, but emit a depricated warning.

*   The exploration array is now termed range. Accordingly, the function `f_is_array` is
    renamed `f_has_range` and `f_get_array` renamed to `f_get_range`.

*   v_leaf renamed to v_is_leaf

*   f_is_root renamed to v_is_root and changed to property

*   v_fast_accessible renamed to f_supports_fast_access and changed to function

*   v_parameter changed to v_is_parameter

pypet 0.1b.1

*   Support for `long` types

*   Documentation for the `f_find_idx` function

*   The parameters `trajectory_name` and `trajectory_index` in f_load have been renamed to
    `name` and `index`

pypet 0.1b.0

*   Group nodes support __getitem__

*   SparseResult

*   If you merge trajectory, all environment settings of both are kept.

*   More information about the environment is added to the trajectory

*   BUG FIX:

    Recall of trajectory comments from diks yielded numpy strings instead of python strings
    This could cause trouble if the comment is empty!

*   Git Integration, you can now make autocommits for every experiment

*   New Sparse Parameter, for scipy sparse matrices

*   BUG FIX: Loading of Trajectory metadata, now v_time is loaded correctly

*   BUG FIX: Expand no longer repeats already run experiments

*   More fine grain overview tables

*   Comments for runs are only added once and not every run
